# protodune_trigger_training_data

./: README.md  pyproject.toml  requirements.txt
src/generate_protodune_trigger_training_data/: __init__.py  bin_combined_plane_protodune_training_data.py  bin_protodune_training_data.py  convert_artroot_training_data_to_hdf5.py
